# Bridge

./: .gitignore  ADB & Serial Port Debugging Tools — Design Document(EN).md  CLAUDE.md  LICENSE  README.md  README_CN.md  THIRD-PARTY-NOTICES.md  index.html  package-lock.json  package.json
docs/: ADB & Serial Port Debugging Tools — Design Document(EN).md  ADB Module API Reference.md  Bridge — Design Document.md  DevBridge — Design Document.md  OHOS Module API Reference.md  Serial Module API Reference.md
docs/CN/: ADB 模块 API 参考.md  Bridge — 设计文档.md  OHOS 模块 API 参考.md  串口模块 API 参考.md
docs/EN/: ADB Module API Reference.md  Bridge — Design Document.md  OHOS Module API Reference.md  Serial Module API Reference.md
src/: App.tsx  main.tsx  styles.css  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  log_stream.rs  main.rs  util.rs
src-tauri/src/adb/: apps.rs  commands.rs  device.rs  file.rs  logcat.rs  mod.rs  scrcpy.rs  screen.rs
src-tauri/src/hdc/: apps.rs  commands.rs  device.rs  file.rs  hilog.rs  mod.rs  screen.rs
src-tauri/src/serial/: manager.rs  state.rs
src/hooks/: useAdbEvents.ts  useEventListener.ts  useHdcEvents.ts  useSerialEvents.ts  useShellEvents.ts
src/store/: commandStore.ts  configStore.ts  deviceStore.ts  serialStore.ts
src/types/: adb.ts  device.ts  (+2 more)
version/: v0.1.1.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md  v0.2.5.md  v0.2.6.md  v0.2.7.md  v0.3.0.md  v0.3.1.md  v0.3.2.md  v0.3.3.md  v0.3.4.md  v0.3.5.md  v0.3.6.md
(+37 files in other folders)
