[package]
name = "bridge"
version = "0.3.5"
description = "Device Debugging Toolkit"
authors = ["Bridge"]
edition = "2021"

[lib]
name = "bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
serialport = "4"
regex = "1"
uuid = { version = "1", features = ["v4"] }
once_cell = "1"
base64 = "0.22"
